fixing navbar mobile on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body::before {
   right: 0;
   top: 0;
   height: 100vh;
-  z-index: 1;
+  z-index: -1;
   filter: brightness(50%)
 }
 
@@ -344,6 +344,7 @@ h6 {
   bottom: 0;
   background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
+  transform: translate3d(0, 0, 0);
   z-index: 999;
   margin-top: 0;
 }
